# bptracker-backend-fastapi

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_DEV.md  alembic.ini  compose.prod.yaml  compose.yaml  config.py  conftest.py  db.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2154700cb0ca_create_measurements.py  2e2ee64666bc_create_webauthn_tables.py  360593de6e48_add_on_delete_cascade_to_users.py  38fadde924fb_rework_intake_reports_taken_at_recorded_.py  46a937daa5e2_drop_password_hash_from_users.py  4b0b9cd951d2_drop_timezone_from_users.py  51e0da194659_drop_prescription_id_from_intake_reports.py  5234b5d19adf_create_reminder_config_and_intake_.py  65876195c6de_add_users_table.py  6c2975a57ecb_add_last_export_at_to_users.py  723993d2e12b_create_email_outbox.py  7937bbb21eae_create_prescriptions_and_medication_.py  8809aea66172_create_sessions_table.py  901b2b9941ba_add_user_id_foreign_keys.py  c333f63cebc8_course_start_to_timestamptz.py  cad79c45fa3b_create_magic_links_table.py  e1a2b3c4d5e6_add_display_name_to_users.py
auth/: crud.py  deps.py  models.py  router.py  security.py  service.py
auth/tests/: test_auth.py  test_magic_link.py  test_sessions.py
auth/webauthn/: __init__.py  crud.py  models.py  router.py  service.py
cleanup/: worker.py
cleanup/tests/: test_worker.py
docs/: DECISIONS.md  PROJECT.md  ROADMAP.md  conventions.md  legacy-prescriptions.csv  medication-data-model.md  medication-dosage-model_2.md  prompt-magic-link-1-email-infra.md  prompt-magic-link-2-logic.md  prompt.md  prompt1.md
email_infra/: __init__.py  crud.py  deps.py  models.py  sender.py  types.py  worker.py
email_infra/tests/: test_email.py  test_outbox.py
export/: models.py  router.py  service.py
export/tests/: test_export.py
measurements/: analyze.py  crud.py  models.py  router.py
measurements/tests/: test_analyze.py  test_measurements.py
prescriptions/crud/: __init__.py  medication_item.py  prescription.py
prescriptions/models/: __init__.py  enums.py  medication_item.py  prescription.py
prescriptions/router/: __init__.py  deps.py  medication_item.py  prescription.py
prescriptions/tests/: test_medication_items.py  test_prescriptions.py
reminders/crud/: __init__.py  intake_report.py  reminder_config.py
reminders/models/: __init__.py  intake_report.py  (+1 more)
scripts/: import_from_legacy.py
tests/: test_config.py
users/: router.py
(+9 files in other folders)
