[project]
name = "bptracker-backend-fastapi"
version = "0.1.0"
description = "BP Tracker backend fastapi"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.137.1",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "sqlmodel>=0.0.39",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.coverage.run]
source = ["."]
# SQLAlchemy's async ORM bridges to sync code via greenlet_spawn; without this,
# coverage.py can't trace inside that greenlet and reports false "missing" lines
# for code that tests clearly exercise (e.g. every awaited session call).
concurrency = ["greenlet"]
omit = [
    "*/tests/*",
    "conftest.py",
    "alembic/*",
    "main.py",
]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]